[gd_scene load_steps=6 format=3 uid="uid://bh0sjxuqhrsqm"]

[ext_resource type="Script" path="res://scenes/main/Editor.gd" id="1_8u6jb"]
[ext_resource type="PackedScene" uid="uid://dckdlwm4hn7u8" path="res://scenes/ui/TilesetPanel.tscn" id="2_xahsr"]
[ext_resource type="PackedScene" uid="uid://bbkjl2yc1t7bs" path="res://scenes/components/MapCanvas.tscn" id="3_u02hl"]
[ext_resource type="PackedScene" uid="uid://bjd8lrxs1ocjn" path="res://scenes/ui/TerrainInspector.tscn" id="4_8t5sg"]
[ext_resource type="PackedScene" uid="uid://cwskqfwpgqn8v" path="res://scenes/ui/dialogs/MapGenerationDialog.tscn" id="5_gen_dialog"]

[node name="Editor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8u6jb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuBar" type="MenuBar" parent="VBoxContainer"]
layout_mode = 2

[node name="ToolBar" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ToolBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContentArea" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftPanel" type="Control" parent="VBoxContainer/ContentArea"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2

[node name="TilesetPanel" parent="VBoxContainer/ContentArea/LeftPanel" instance=ExtResource("2_xahsr")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterPanel" type="Control" parent="VBoxContainer/ContentArea"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MapCanvas" parent="VBoxContainer/ContentArea/CenterPanel" instance=ExtResource("3_u02hl")]
layout_mode = 1

[node name="RightPanel" type="Control" parent="VBoxContainer/ContentArea"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2

[node name="TerrainInspector" parent="VBoxContainer/ContentArea/RightPanel" instance=ExtResource("4_8t5sg")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatusBar" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/StatusBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 2.0
offset_right = -5.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer/StatusBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ready"
vertical_alignment = 1

[node name="ToolLabel" type="Label" parent="VBoxContainer/StatusBar/HBoxContainer"]
layout_mode = 2
text = "Tool: Paint"
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/StatusBar/HBoxContainer"]
layout_mode = 2

[node name="ZoomLabel" type="Label" parent="VBoxContainer/StatusBar/HBoxContainer"]
layout_mode = 2
text = "Zoom: 100%"
vertical_alignment = 1

[node name="OpenDialog" type="FileDialog" parent="."]
title = "Open Map"
initial_position = 2
size = Vector2i(800, 600)
ok_button_text = "Open"

[node name="SaveDialog" type="FileDialog" parent="."]
title = "Save Map As"
initial_position = 2
size = Vector2i(800, 600)
ok_button_text = "Save"

[node name="MapGenerationDialog" parent="." instance=ExtResource("5_gen_dialog")]
